[tool.poetry]
name = "python-geetest3"
version = "1.0.0"
description = "极验3代"
authors = ["Hobr"]
license = "GPL3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
httpx = "^0.28.1"
bili-ticket-gt-python = "^0.2.2"
pycryptodome = "^3.20.0"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
